Python/src/gateway/manifests/gateway-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec: ##pod level spec 
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels: 
        app: gateway
    spec: ##container level spec
      containers:
        - name: gateway
          image: bazy12/gateway
          ports:
            - containerPort: 8080
